name:                v2md
version:             0.1.0.0
synopsis:            Generate Pandoc files from Coq (v2md)
description:         Generate Pandoc files from Coq (v2md)
homepage:            https://github.com/carliros/v2md#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos G.
maintainer:          carliros.g@gmail.com
copyright:           2017 Carlos G.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable v2md
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Scanner, PandocProcess, Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , filepath
                     , text
                     , string-conversions
